<resources>
    <string name="app_name">SAApp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"WELCOME!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
        <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_a_user_login">Already a user. Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="back">Back</string>
    <string name="points">Points</string>
    <string name="logout">Logout</string>
    <string name="go_premium">Go Premium</string>
    <string name="reset_password">Reset Password</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="map_type_menu">map type menu</string>
    <string name="search_for_places">Search for places…</string>
    <string name="place_name">Place Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="rating">Rating</string>
    <string name="price_level">Price Level: %1$d</string>
    <string name="types">Types</string>
    <string name="place_photo">place photo</string>
    <string name="close">Close</string>
    <string name="admin">ADMIN</string>
    <string name="add_places">Add New Place</string>
    <string name="title_admin">Admin</string>
    <string name="role">Role</string>
    <string name="prompt_role">Role</string>
    <string name="enter_location">Enter Location</string>
    <string name="title_places">Places</string>
    <string name="view_map">See map</string>
    <string name="enter_points">Enter Points</string>
    <string name="title_rewards">Rewards</string>
    <string name="enter_the_reward_name">Enter the reward name</string>
    <string name="enter_the_reward_description">Enter the reward description</string>
    <string name="enter_the_points_to_redeem_the_reward">Enter the necessary points to redeem the reward</string>
    <string name="enter_the_partner_name">Enter the partner name</string>
    <string name="rewards">Rewards</string>
    <string name="enter_partner">Enter Partner</string>
    <string name="add_new_reward">Add New Reward</string>
    <string name="hide_bottom_sheet">Hide Bottom Sheet</string>
    <string name="close_bottom_sheet">Close Bottom Sheet</string>
    <string name="place_address">Place address</string>
    <string name="nome">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="partner">Partner</string>
    <string name="redeem">Redeem</string>
</resources>