<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/place_name" />

    <TextView
        android:id="@+id/place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/place_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/place_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/rating" />

    <TextView
        android:id="@+id/place_price_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/price_level" />

    <TextView
        android:id="@+id/place_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/types" />

    <ImageView
        android:id="@+id/place_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/place_photo" />

    <Button
        android:id="@+id/close_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:cornerRadius="20dp"/>
</LinearLayout>
