<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_500" />

            <!-- Email -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextEmailProfile"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/prompt_email"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:enabled="false"/>
            <!-- Role -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/TextViewRoleProfile"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/prompt_role"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="role"
                android:enabled="false"/>

            <!-- Points -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/points"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profilePoints"
                    android:text="@string/points"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>

            <!-- Logout Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/logout"
                android:id="@+id/buttonLogout"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple_500"
                app:cornerRadius="20dp" />

            <!-- Logout Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/reset_password"
                android:id="@+id/buttonResetPass"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple_500"
                app:cornerRadius="20dp" />

            <!-- Go Premium Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/go_premium"
                android:id="@+id/buttonGoPremium"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
