<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/addPlaceCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- ADMIN -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!-- Place -->
            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Location"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:hint="@string/enter_location"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Points"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:hint="@string/enter_points"
                android:inputType="text" />

            <EditText
                android:id="@+id/editPartnerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Partner"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:hint="@string/enter_partner"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonAddPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add_places"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/textViewPlaceDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:visibility="invisible"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
