<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/fragment_admin"
    tools:context=".AddRewardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="88dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="595dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">
            <!-- ADMIN -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!-- Reward -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNameReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/nameReward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter the reward name"
                    android:hint="@string/enter_the_reward_name"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDescriptionReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/descriptionReward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter the reward description"
                    android:hint="@string/enter_the_reward_description"
                    android:inputType="text" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPointsReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/pointsReward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter the points to redeem the reward"
                    android:hint="@string/enter_the_points_to_redeem_the_reward"
                    android:inputType="number" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPartnerReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/partnerReward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter the partner name"
                    android:hint="@string/enter_the_partner_name"
                    android:inputType="text" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonAddReward"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple_500"
                android:text="Add New Reward"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

