<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextEmailForgotPass"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/prompt_email"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/forgot_password_title"
                android:id="@+id/buttonForgotPassword"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple_500"
                app:cornerRadius = "20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/back"
                android:id="@+id/buttonBack"
                android:textSize="18sp"
                android:backgroundTint="@color/black"
                app:cornerRadius = "20dp" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
